<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:backgroundTint="@color/background_widget"
    android:background="@drawable/bg_16dp_green"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLines="1"
        android:text="@string/monday_16_2026"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DayTitle"
            android:text="@string/monday_short"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DayTitle"
            android:text="@string/tuesday_short"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DayTitle"
            android:text="@string/wednesday_short"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DayTitle"
            android:text="@string/thursday_short"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DayTitle"
            android:text="@string/friday_short"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DayTitle"
            android:text="@string/saturday_short"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DayTitle"
            android:text="@string/sunday_short"
            android:textColor="@android:color/darker_gray"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:orientation="horizontal">

        <TextView
            style="@style/CircleDay"
            android:text="16"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/background_widget"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>
        <TextView
            style="@style/CircleDay"
            android:text="17"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>
        <TextView
            style="@style/CircleDay"
            android:text="18"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>

        <TextView
            style="@style/CircleDay"
            android:text="19"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>

        <TextView
            style="@style/CircleDay"
            android:text="20"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>

        <TextView
            style="@style/CircleDay"
            android:text="21"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>
        <TextView
            style="@style/CircleDay"
            android:text="22"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:text=""/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/finish_morning_exercises"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_round_shape"/>

</LinearLayout>